test_files/netlist_footer_cmp/valid/valid_case_10_a.net
V1 IN 0 1
R1 IN OUT 10k
C1 OUT 0 22n
.temp 27
.ac dec 5 10 100k
.backanno
.end
